# juego

./: CMakeLists.txt  ExplosionProyectil.cpp  ExplosionProyectil.h  Menu.cpp  Menu.h  Personaje.cpp  Personaje.h  Plataforma.cpp  Plataforma.h  Proyectil.cpp  Proyectil.h  RealGame.cpp  RealGame.h  TMRE.cpp  VectorUtil.cpp  VectorUtil.h  cuadrado.h  game.cpp  game.h  main.cpp  projectile.cpp  projectile.h  readme.md
components/: CompBarraPoder.h  CompBarraVida.h  CompPersonaje.h  CompPlataforma.h  Componente.h
